samples/_failures_safe/1761725693_08c528_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68a20eff.c: In function ‘main’:
./samples/SAFE/__tmp_68a20eff.c:149:17: error: expected declaration or statement at end of input
  149 |                 if (add_matrices(&mat1, &mat2, &result)) {
      |                 ^~
./samples/SAFE/__tmp_68a20eff.c:149:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_68a20eff.c:149:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_68a20eff.c:149:17: error: expected declaration or statement at end of input
